--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,7 +4,7 @@
 
 ******************************************************************/
 
-@import "../../bower_components/bootstrap/themes/flatly.bootstrap.min";
+@import "themes/flatly.bootstrap.min";
 
 /* Partials */
 
