--- a/src/sass/modules/_main.scss
+++ b/src/sass/modules/_main.scss
@@ -3,3 +3,10 @@
  Main
 
 ******************************************************************/
+
+div.tab-container {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-top: none;
+    border-bottom: 1px solid #ddd;
+}
